fix white spacing bug for paragraph element

--- a/src/App.css
+++ b/src/App.css
@@ -72,21 +72,18 @@ p {
   font-family: Outfit;
   font-size: 16px;
   font-weight: 300;
-  white-space: pre;
 }
 
 ul {
   font-family: Outfit;
   font-size: 16px;
   font-weight: 300;
-  white-space: pre;
 }
 
 li {
   font-family: Outfit;
   font-size: 16px;
   font-weight: 300;
-  white-space: pre;
 }
 
 .navbar {
@@ -164,10 +161,11 @@ li {
   height: 500px;
   background-color: #E3E3E3;
   padding: 130px 160px;
+
 }
 
 .category-info-container {
-  padding-right: 0px; 
+  padding-right: 16px; 
   padding-left: 16px;
 }
 
@@ -200,6 +198,7 @@ li {
 .footer {
   margin-top: 80px;
 }
+
 .footer-info {
   width: 100%;
   height: 300px;
